# pokecatch-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
data/: bag_contents.txt  current_pokemon.txt  pc.txt  pokeball_available.txt  pokemon_legendary.txt
data/config/: item_encounter_chances.config  item_powerup_chances.config  pokeball_chances.config  pokemon_encounter_chance.config
scripts/: female pokemon rename.py  legendaries scraper.py  legendaries_dom.txt  pokemon scraper.py
src/: cli.rs  lib.rs  main.rs  paths.rs  sprites.rs  utils.rs
src/types/: Bag.rs  Ball.rs  BaseEntity.rs  Item.rs  Pc.rs  Pokemon.rs
